# tavern

./: .gitignore  .gitmodules  Cargo.toml  README.md  dist.macos.sh  dist.win.sh
client/: Bundle.toml  Cargo.toml  dist.macos.sh
client/src/: app.rs  lib.rs  main.rs
client/src/santorini/: mod.rs
core/: Cargo.toml  t.sh  time.tests.sh
core/src/: lib.rs
core/src/game/: mod.rs  packed.rs  util.rs
core/src/game/santorini/: board.rs  depth_first.rs  evaluator_info.rs  heuristic.rs  minimax.rs  minimax_alphabeta.rs  mod.rs  move_builder.rs  move_stack.rs  negamax.rs  negamax_alphabeta.rs  negamax_alphabeta_exp.rs  perft.numbers.txt  perft.rs  playout.rs  state.rs  tests.rs  transposition.rs
core/src/game/santorini/evaluator/: minimax.rs  minimax_alphabeta.rs  negamax.rs  negamax_alphabeta.rs  negamax_alphabeta_exp.rs
notes/: adverserial playout.txt  depth5.perft.txt  old move records.txt  perft results.txt  state move verification.txt  transposition experiments.txt
resources/shader/: fat.frag  fat.vert
server/: Cargo.toml
service/: Cargo.toml
service/src/: ai.rs  board_state.rs  event.rs  game.rs  lib.rs  play.rs  server.rs  tentative.rs
src/: app.rs  lib.rs  main.rs
src/santorini/: mod.rs
