[package]
name = "tavern_client"
version = "0.1.0"
authors = ["Michael Shaw <michaeljshaw@gmail.com>"]

[dependencies]
cgmath = "0.14"
rand = "0.3"
time = "0.1"
pad = "0.1"
quickersort = "2.2"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

aphid = { git = "https://github.com/michaelshaw/aphid" }
jam = { git = "https://github.com/michaelshaw/jam" }
howl = { git = "https://github.com/michaelshaw/howl" }

tavern_core = { path = "../core" }
tavern_service = { path = "../service" }