[package]
name = "tavern_core"
version = "0.1.0"
authors = ["Michael Shaw <michaeljshaw@gmail.com>"]

[dependencies]
rand = "0.3.15"
time = "0.1.35"
pad = "0.1.4"
quickersort = "2.2.0"
fnv = "1.0"
colored = "1.4"

serde = "1.0"
serde_derive = "1.0"

aphid = { git = "https://github.com/michaelshaw/aphid" }
