[package]
name = "tavern_service"
version = "0.1.0"
authors = ["Michael Shaw <michaeljshaw@gmail.com>"]

[dependencies]
rand = "0.3"
time = "0.1"

serde = "1.0"
serde_derive = "1.0"

futures = "0.1"

aphid = { git = "https://github.com/michaelshaw/aphid" }
psyk = { git = "https://github.com/michaelshaw/psyk" }

tavern_core = { path = "../core" }
